--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg bg-success bg-opacity-90">
             <div class="container-fluid">
-                <img src="img/logo.JPG" class="logo-item img-fluid" alt="">
+                <img src="img/logo.jpg" class="logo-item img-fluid" alt="">
                 <a class="navbar-brand" href="#">C.E.B San Antonio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
                     <h5>Actividades Diarias</h5>
                     <p>Realizamos actividades diarias para fomentar el aprendizaje continuo.</p>
                 </div>
-                </div>
+                </div>  
                 <div class="carousel-item dtitem-img">
                 <img src="img/foto3.webp" class="d-block w-100 img-fluid dt-img" alt="...">
                 <div class="carousel-caption d-none d-md-block">
